--- a/eventstore/build.gradle
+++ b/eventstore/build.gradle
@@ -31,6 +31,6 @@ dependencies {
     testImplementation(libs.h2)
 
     integrationTestImplementation(testFixtures(project(":eventstore")))
-    integrationTestImplementation(libs.testcontainersMysql)
-    integrationTestImplementation(libs.testcontainersPostgres)
+    integrationTestImplementation(libs.dbTestPostgres)
+    integrationTestImplementation(libs.dbTestMysql)
 }
