--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 brave = "5.16.0"
 flyway = "9.17.0"
 testcontainers = "1.18.1"
+dbtest = "0.0.1"
 
 [libraries]
 # Production
@@ -32,8 +33,9 @@ apacheHttpClient = "org.apache.httpcomponents:httpclient:4.5.14"
 apacheHttpAsyncClient = "org.apache.httpcomponents:httpasyncclient:4.1.5"
 
 testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
-testcontainersPostgres = { module = "org.testcontainers:postgresql", version.ref = "testcontainers" }
-testcontainersMysql = { module = "org.testcontainers:mysql", version.ref = "testcontainers" }
+
+dbTestPostgres = { module = "io.github.rieske.dbtest:postgresql", version.ref = "dbtest" }
+dbTestMysql = { module = "io.github.rieske.dbtest:mysql", version.ref = "dbtest" }
 
 [bundles]
 zipkin = ["zipkinSparkJava", "zipkinDatabase", "zipkinSender"]
