--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 brave = "5.16.0"
 flyway = "9.17.0"
 testcontainers = "1.18.1"
-dbtest = "0.0.3"
+dbtest = "0.0.4"
 
 [libraries]
 # Production
@@ -27,13 +27,13 @@ junit = "org.junit.jupiter:junit-jupiter:5.9.3"
 assertj = "org.assertj:assertj-core:3.24.2"
 archunit = "com.tngtech.archunit:archunit-junit5:1.0.1"
 restAssured = "io.rest-assured:rest-assured:5.3.0"
-h2 = "com.h2database:h2:2.1.214"
 
 apacheHttpClient = "org.apache.httpcomponents:httpclient:4.5.14"
 apacheHttpAsyncClient = "org.apache.httpcomponents:httpasyncclient:4.1.5"
 
 testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 
+dbTestH2 = { module = "io.github.rieske.dbtest:h2", version.ref = "dbtest" }
 dbTestPostgres = { module = "io.github.rieske.dbtest:postgresql", version.ref = "dbtest" }
 dbTestMysql = { module = "io.github.rieske.dbtest:mysql", version.ref = "dbtest" }
 
