Fix compose scripts

--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -60,11 +60,11 @@ tasks.register("asyncStressTest", JavaExec) {
 
 tasks.register("composeUp", Exec) {
     it.dependsOn("build")
-    def composeFile = eventstoreImpl.get() == "mysql" ? "docker compose-mysql.yml" : "docker-compose.yml"
+    def composeFile = eventstoreImpl.get() == "mysql" ? "docker-compose-mysql.yml" : "docker-compose.yml"
     it.inputs.files(file("${rootProject.projectDir}/$composeFile")).withPathSensitivity(PathSensitivity.RELATIVE)
     it.workingDir(rootProject.projectDir)
-    it.executable("docker-compose")
-    it.args("-f", "$composeFile", "up", "--build", "-d")
+    it.executable("docker")
+    it.args("compose", "-f", "$composeFile", "up", "--build", "-d")
     it.doLast {
         println("\n\n")
         println("Eventstore backend: ${eventstoreImpl.get()}\n")
@@ -77,6 +77,6 @@ tasks.register("composeUp", Exec) {
 
 tasks.register("composeDown", Exec) {
     it.workingDir(rootProject.projectDir)
-    it.executable("docker compose")
-    it.args("down")
+    it.executable("docker")
+    it.args("compose", "down")
 }
