--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,16 +18,14 @@ jobs:
       with:
         java-version: 21
         distribution: temurin
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
     - name: Build
-      uses: burrunan/gradle-cache-action@v1
-      with:
-        arguments: build --stacktrace
+      run: ./gradlew build --stacktrace
     - name: Upload code coverage report to coveralls
-      uses: burrunan/gradle-cache-action@v1
+      run: ./gradlew codeCoverageReport coveralls --no-configuration-cache
       env:
         COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
-      with:
-        arguments: codeCoverageReport coveralls --no-configuration-cache
     - name: Prepare Release
       id: release_config
       run: |
