--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
     - name: Build
-      run: ./gradlew build --stacktrace
+      run: ./gradlew build --stacktrace --scan
     - name: Upload code coverage report to coveralls
       run: ./gradlew codeCoverageReport coveralls --no-configuration-cache
       env:
