--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id("com.gradle.enterprise").version("3.15.1")
+}
 dependencyResolutionManagement {
     repositories {
         mavenCentral()
