--- a/.github/workflows/branch-build.yml
+++ b/.github/workflows/branch-build.yml
@@ -26,8 +26,6 @@ jobs:
         path: "**/build/reports/tests/"
 
     - name: Upload code coverage report to coveralls
-      uses: burrunan/gradle-cache-action@v1
       env:
         COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
-      with:
-        arguments: codeCoverageReport coveralls --no-configuration-cache
+      run: ./gradlew codeCoverageReport coveralls --no-configuration-cache
