--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Setup Java
       uses: actions/setup-java@v3
       with:
         java-version: 21
@@ -26,6 +27,8 @@ jobs:
       run: ./gradlew codeCoverageReport coveralls --no-configuration-cache
       env:
         COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
+
+# TODO: below need refactoring to not use ::set-output
     - name: Prepare Release
       id: release_config
       run: |
