--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches: ["master"]
 
+permissions:
+  contents: write
+
 env:
   SERVICE_NAME: account
 
@@ -21,12 +24,15 @@ jobs:
         distribution: temurin
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
+      with:
+        dependency-graph: generate-and-submit
     - name: Build
       run: ./gradlew build --stacktrace --scan
     - name: Upload code coverage report to coveralls
       run: ./gradlew codeCoverageReport coveralls --no-configuration-cache
       env:
         COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
+        GITHUB_DEPENDENCY_GRAPH_ENABLED: false
 
 # TODO: below need refactoring to not use ::set-output
     - name: Prepare Release
