--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,8 @@ jobs:
         dependency-graph: generate-and-submit
     - name: Build
       run: ./gradlew build --stacktrace --scan
+      env:
+        DEPENDENCY_GRAPH_INCLUDE_CONFIGURATIONS: runtimeClasspath
     - name: Upload code coverage report to coveralls
       run: ./gradlew codeCoverageReport coveralls --no-configuration-cache
       env:
