--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
     ports:
       - 9901:9901
       - 8080:10000
+    labels:
+      logging: promtail
+      service: envoy
     mem_limit: 32M
 
   account:
@@ -21,6 +24,9 @@ services:
       DB_USER: test
       DB_PASSWORD: test
       ZIPKIN_URL: http://zipkin:9411/api/v2/spans
+    labels:
+      logging: promtail
+      service: account
     mem_limit: 128M
     scale: 2
 
@@ -33,6 +39,19 @@ services:
     volumes:
       - data:/var/lib/postgresql/data
     mem_limit: 512M
+
+  promtail:
+    image: grafana/promtail:2.9.3
+    volumes:
+      - ./infrastructure/promtail/promtail.yml:/etc/promtail/config.yml
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  loki:
+    image: grafana/loki:2.9.3
+    volumes:
+      - ./infrastructure/loki/loki.yml:/etc/loki/local-config.yaml
+    ports:
+      - 3100
 
   prometheus:
     image: prom/prometheus:v2.48.1
