--- a/infrastructure/grafana/provisioning/datasources/datasources.yml
+++ b/infrastructure/grafana/provisioning/datasources/datasources.yml
@@ -8,3 +8,10 @@ datasources:
     url: http://prometheus:9090
     isDefault: true
     editable: false
+  - name: Loki
+    type: loki
+    access: proxy
+    orgId: 1
+    url: http://loki:3100
+    isDefault: false
+    editable: false
