Add opentelemetry collector
Route service logs and metrics via the otel collector.
Refactor observability configuration.

--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 
     implementation(libs.msgpack)
     implementation(libs.bundles.logging)
-    implementation(libs.micrometer)
+    implementation(libs.bundles.micrometer)
     implementation(libs.hikari)
     implementation(libs.bundles.zipkin)
 
