--- a/infrastructure/loki/loki.yml
+++ b/infrastructure/loki/loki.yml
@@ -33,6 +33,9 @@ schema_config:
         prefix: index_
         period: 24h
 
+limits_config:
+  split_queries_by_interval: 0
+
 ruler:
   alertmanager_url: http://localhost:9093
 
