--- a/account-service/src/blackBoxTest/resources/e2e-test-mysql.yml
+++ b/account-service/src/blackBoxTest/resources/e2e-test-mysql.yml
@@ -1,6 +1,3 @@
----
-version: '2.4'
-
 services:
 
   lb:
@@ -21,7 +18,8 @@ services:
       DB_USER: test
       DB_PASSWORD: test
     mem_limit: 128M
-    scale: 2
+    deploy:
+      replicas: 2
 
   database:
     image: mysql:8.0.35
