--- a/docker-compose-mysql.yml
+++ b/docker-compose-mysql.yml
@@ -1,6 +1,3 @@
----
-version: '2.4'
-
 services:
 
   lb:
@@ -22,7 +19,8 @@ services:
       DB_PASSWORD: test
       ZIPKIN_URL: http://zipkin:9411/api/v2/spans
     mem_limit: 128M
-    scale: 2
+    deploy:
+      replicas: 2
 
   database:
     image: mysql:8.2.0
