--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
----
-version: '2.4'
-
 services:
 
   lb:
@@ -23,12 +20,14 @@ services:
       JDBC_URL: jdbc:postgresql://database:5432/event_store
       DB_USER: test
       DB_PASSWORD: test
+      OPENTELEMETRY_URL: http://opentelemetry-collector:4318/v1/metrics
       ZIPKIN_URL: http://zipkin:9411/api/v2/spans
     labels:
       logging: promtail
       service: account
     mem_limit: 128M
-    scale: 2
+    deploy:
+      replicas: 2
 
   database:
     image: postgres:16.1
@@ -52,6 +51,21 @@ services:
       - ./infrastructure/loki/loki.yml:/etc/loki/local-config.yaml
     ports:
       - 3100
+
+  opentelemetry-collector:
+    image: otel/opentelemetry-collector-contrib:0.91.0
+    volumes:
+      - ./infrastructure/opentelemetry-collector/opentelemetry.yml:/etc/otelcol-contrib/config.yaml
+    ports:
+      - 3500 # Loki ingest port
+      - 4318 # OTLP http receiver
+      - 9099:9099 # Prometheus scrape endpoint
+      - 1888:1888 # pprof extension
+      - 8888:8888 # Prometheus metrics exposed by the Collector
+      - 8889:8889 # Prometheus exporter metrics
+      - 13133:13133 # health_check extension
+      - 4317:4317 # OTLP gRPC receiver
+      - 55679:55679 # zpages extension
 
   prometheus:
     image: prom/prometheus:v2.48.1
