Replace Zipkin with Tempo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
     volumes:
       - ./infrastructure/promtail/promtail.yml:/etc/promtail/config.yml
       - /var/run/docker.sock:/var/run/docker.sock
+    mem_limit: 512M
 
   loki:
     image: grafana/loki:2.9.3
@@ -51,6 +52,7 @@ services:
       - ./infrastructure/loki/loki.yml:/etc/loki/local-config.yaml
     ports:
       - 3100
+    mem_limit: 512M
 
   opentelemetry-collector:
     image: otel/opentelemetry-collector-contrib:0.91.0
@@ -67,14 +69,26 @@ services:
       - 13133:13133 # health_check extension
       - 4317:4317 # OTLP gRPC receiver
       - 55679:55679 # zpages extension
+    mem_limit: 512M
 
   prometheus:
     image: prom/prometheus:v2.48.1
+    command: [ "--web.enable-remote-write-receiver", "--config.file=/etc/prometheus/prometheus.yml" ]
     ports:
       - 9090:9090
     volumes:
-      - ./infrastructure/prometheus/:/etc/prometheus/
+      - ./infrastructure/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     mem_limit: 64M
+
+  tempo:
+    image: grafana/tempo:2.3.1
+    command: [ "-config.file=/etc/tempo.yml" ]
+    volumes:
+      - ./infrastructure/tempo/tempo.yml:/etc/tempo.yml
+    ports:
+      - 3200
+      - 4318  # otlp http
+    mem_limit: 512M
 
   grafana:
     image: grafana/grafana:10.2.3
@@ -82,17 +96,13 @@ services:
       - 3000:3000
     environment:
       GF_AUTH_ANONYMOUS_ENABLED: "true"
-      GF_AUTH_ORG_ROLE: "Editor"
+      GF_AUTH_ANONYMOUS_ORG_ROLE: "Admin"
+      GF_AUTH_DISABLE_LOGIN_FORM: "true"
+      GF_FEATURE_TOGGLES_ENABLE: "traceqlEditor traceQLStreaming metricsSummary"
     volumes:
       - ./infrastructure/grafana/provisioning:/etc/grafana/provisioning/
       - ./infrastructure/grafana/dashboards:/var/lib/grafana/dashboards/
     mem_limit: 64M
-
-  zipkin:
-    image: openzipkin/zipkin:2.26.0
-    ports:
-      - 9411:9411
-    mem_limit: 512M
 
 volumes:
   data:
