--- a/infrastructure/grafana/provisioning/datasources/datasources.yml
+++ b/infrastructure/grafana/provisioning/datasources/datasources.yml
@@ -8,6 +8,8 @@ datasources:
     url: http://prometheus:9090
     isDefault: true
     editable: false
+    uid: prometheus
+
   - name: Loki
     type: loki
     access: proxy
@@ -15,3 +17,45 @@ datasources:
     url: http://loki:3100
     isDefault: false
     editable: false
+    uid: loki
+
+  - name: Tempo
+    type: tempo
+    access: proxy
+    orgId: 1
+    url: http://tempo:3200
+    isDefault: false
+    editable: true
+    jsonData:
+      tracesToLogsV2:
+        datasourceUid: 'loki'
+      #  spanStartTimeShift: '1h'
+      #  spanEndTimeShift: '-1h'
+      #  tags: [ 'job', 'instance', 'pod', 'namespace' ]
+      #  filterByTraceID: false
+      #  filterBySpanID: false
+      #  customQuery: true
+      #  query: 'method="${__span.tags.method}"'
+      tracesToMetrics:
+        datasourceUid: 'prometheus'
+      #  spanStartTimeShift: '1h'
+      #  spanEndTimeShift: '-1h'
+      #  tags: [ { key: 'service.name', value: 'service' }, { key: 'job' } ]
+      #  queries:
+      #    - name: 'Sample query'
+      #      query: 'sum(rate(traces_spanmetrics_latency_bucket{$$__tags}[5m]))'
+      serviceMap:
+        datasourceUid: 'prometheus'
+      nodeGraph:
+        enabled: true
+      #search:
+      #  hide: false
+      lokiSearch:
+        datasourceUid: 'loki'
+      #traceQuery:
+      #  timeShiftEnabled: true
+      #  spanStartTimeShift: '1h'
+      #  spanEndTimeShift: '-1h'
+      #spanBar:
+      #  type: 'Tag'
+      #  tag: 'http.path'
