--- a/infrastructure/grafana/provisioning/datasources/datasources.yml
+++ b/infrastructure/grafana/provisioning/datasources/datasources.yml
@@ -20,7 +20,7 @@ datasources:
     orgId: 1
     url: http://loki:3100
     isDefault: false
-    editable: false
+    editable: true
     uid: loki
 
   - name: Tempo
