--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,17 +63,11 @@ services:
       - 4318 # OTLP http receiver
       - 9411 # Zipkin receiver
       - 9099 # Prometheus scrape endpoint
-      - 1888:1888 # pprof extension
-      - 8888:8888 # Prometheus metrics exposed by the Collector
-      - 8889:8889 # Prometheus exporter metrics
-      - 13133:13133 # health_check extension
-      - 4317:4317 # OTLP gRPC receiver
-      - 55679:55679 # zpages extension
     mem_limit: 512M
 
   prometheus:
     image: prom/prometheus:v2.48.1
-    command: [ "--web.enable-remote-write-receiver", "--config.file=/etc/prometheus/prometheus.yml" ]
+    command: [ "--web.enable-remote-write-receiver", "--enable-feature=exemplar-storage", "--config.file=/etc/prometheus/prometheus.yml" ]
     ports:
       - 9090:9090
     volumes:
