--- a/infrastructure/envoy/envoy.yaml
+++ b/infrastructure/envoy/envoy.yaml
@@ -26,6 +26,16 @@ static_resources:
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                       path: /dev/stdout
+                      typed_json_format:
+                        timestamp: "%START_TIME%"
+                        protocol: "%PROTOCOL%"
+                        request: "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
+                        traceparent: "%REQ(TRACEPARENT)%"
+                        duration: "%DURATION%"
+                        bytesReceived: "%BYTES_RECEIVED%"
+                        upstreamCluster: "%UPSTREAM_CLUSTER%"
+                        responseCode: "%RESPONSE_CODE%"
+                        bytesSent: "%BYTES_SENT%"
                 tracing:
                   provider:
                     name: envoy.tracers.opentelemetry
