--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 flyway = "10.7.1"
-testcontainers = "1.19.4"
 dbtest = "0.0.5"
 
 [libraries]
@@ -34,7 +33,7 @@ restAssured = "io.rest-assured:rest-assured:5.4.0"
 apacheHttpClient = "org.apache.httpcomponents:httpclient:4.5.14"
 apacheHttpAsyncClient = "org.apache.httpcomponents:httpasyncclient:4.1.5"
 
-testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
+testcontainers = "org.testcontainers:testcontainers:1.19.4"
 
 dbTestH2 = { module = "io.github.rieske.dbtest:h2", version.ref = "dbtest" }
 dbTestPostgres = { module = "io.github.rieske.dbtest:postgresql", version.ref = "dbtest" }
