Blacklist some unwanted otel resources to reduce telemetry size

--- a/account-service/Dockerfile
+++ b/account-service/Dockerfile
@@ -7,6 +7,7 @@ ENV JAVA_OPTS -Xmx64m -Xms64m
 ENV OTEL_SERVICE_NAME=account-service
 ENV OTEL_EXPORTER_OTLP_PROTOCOL=grpc
 ENV OTEL_INSTRUMENTATION_LOGBACK_APPENDER_EXPERIMENTAL_CAPTURE_MDC_ATTRIBUTES=*
+ENV OTEL_EXPERIMENTAL_RESOURCE_DISABLED_KEYS=process.command_args,process.runtime.name,process.runtime.description,process.executable.path,process.pid
 
 ENTRYPOINT /opt/service/$SERVICE_NAME/bin/$SERVICE_NAME
 HEALTHCHECK --interval=5s CMD curl -s -f http://localhost:8080/ping || exit 1
