--- a/account-service/Dockerfile
+++ b/account-service/Dockerfile
@@ -2,7 +2,7 @@ FROM eclipse-temurin:21.0.2_13-jre
 EXPOSE 8080
 
 ENV SERVICE_NAME=account-service
-ENV JAVA_OPTS -Xmx64m -Xms64m
+ENV JAVA_OPTS -XX:+ExitOnOutOfMemoryError -Xmx64m -Xms64m -XX:MaxMetaspaceSize=128m
 
 ENV OTEL_SERVICE_NAME=account-service
 ENV OTEL_EXPORTER_OTLP_PROTOCOL=grpc
