--- a/.github/workflows/branch-build.yml
+++ b/.github/workflows/branch-build.yml
@@ -19,6 +19,8 @@ jobs:
         distribution: temurin
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
+      with:
+        cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
 
     - name: Build
       run: ./gradlew build --stacktrace --scan
