--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
       with:
+        cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
         dependency-graph: generate-and-submit
     - name: Build
       run: ./gradlew build --stacktrace --scan
